required validation added for reviews

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 
     <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="styles/stickyfooter.css" rel="stylesheet" />
+    <link href="vendor/angluar-growl/angular-growl.css" rel="stylesheet" />
 
 	<meta charset="utf-8" />
 
@@ -16,6 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <div ui-view></div>
+            <div growl></div>
         </div>
     </div>
 
@@ -32,6 +34,7 @@
     <!-- Framework -->
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="vendor/angluar-growl/angular-growl.js"></script>
     <!-- Framework -->
 
     <script src="services/app.service.js"></script> 
